# mindful-web-backend

./: .dockerignore  .env  README.md  pyproject.toml  tasks.py
app/: __init__.py  celery_app.py  config.py  exceptions.py  main.py
app/api/: dependencies.py  handlers.py  routes.py  state_services.py
app/api/v1/: dependencies.py
app/common/: http_responses.py  middleware.py  pagination.py
app/core/: common.py  http_responses.py  lifespan.py  localizer.py  logging.py  middleware.py  normalizers.py
app/db/: exceptions.py  types.py
app/db/models/: base.py  mixins.py  tables.py
app/db/session/: manager.py  provider.py
app/locales/: en.json  ru.json
app/migrations/: env.py
app/migrations/versions/: 2025_10_15_1904-b1569ad77244_initial_migrate.py  2025_11_21_1502-117ffb063561_update_base_tables_for_events_service.py  2026_01_12_0939-4140bb20ebc4_add_verificationcode_table.py  2026_01_12_1206-ab269d920f0f_add_attempts_column_to_verificationcode_.py  2026_01_15_1052-5528e8091ddd_add_pending_email_column_to_user_table.py
app/schemas/: __init__.py  accept_language_header_schema.py  common_meta_schema.py  error_response_schema.py
app/schemas/analytics/: __init__.py  analytics_error_code.py  usage_error_code.py
app/schemas/auth/: __init__.py  auth_error_code.py
app/schemas/events/: __init__.py  event_error_code.py  events_error_code.py  send_events_bad_request_schema.py  (+7 more)
app/services/: exceptions.py  normalizers.py  types.py  validators.py
app/tests/: __init__.py
deploy/: docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
deploy/config/: alembic.ini  gunicorn_conf.py
deploy/docker/: base.Dockerfile  service.Dockerfile
deploy/scripts/: init_db.py
(+251 files in other folders)
